...
    @Environment(\.presentationMode) var presentation
    
    init(viewModel: ViewModel) {
        self.viewModel = viewModel
    }
    
    var registerButtonView: some View {
        Button {
            viewModel.registerVehicle {
                presentation.wrappedValue.dismiss()
            }
            
        } label: {
...
                    VStack(spacing: 20) {
                        TextField(Constants.Labels.enterPlaque, text: $viewModel.state.inputPlaque)
                            .textFieldStyle(RoundedBorderTextFieldStyle())
                            .padding([.top, .trailing, .leading], 20)
                            .font(.system(size: 24))
                            .keyboardType(.asciiCapable)
                            .accessibilityIdentifier("inputPlaque")
                        
                        VStack(spacing: 0) {
                            Text(Constants.Labels.selectTypeVehicle)
                                .foregroundColor(.orange)
                            Picker(Constants.Labels.typeVehicle, selection: $viewModel.state.seletedVehicleType) {
                                ForEach(VehicleType.allCases, id: \.self) {
...
