...

struct InitialPageView: View {
    
    @StateObject private var registerVehicleViewModel = Container.shared.injectRegisterVehicleViewModel()
    @StateObject private var exitVehicleViewModel = Container.shared.injectExitVehicleViewModel()
    
    var registerNavigationLink: some View {
        NavigationLink(
            destination: RegisterVehicleView(viewModel: registerVehicleViewModel),
            label: {
                HStack(alignment: .center, spacing: 6) {
                    Text("Registrar vehículo")
                        .fontWeight(.bold)
...
